5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1838_2602.log
== TEST (2019-06-25 23:33:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

 M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print(R)
-- ERROR:
File "XXXX", line 4
    M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:33:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print(R)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:37:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		R[mini] = R[i]
print(nome[mini])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:37:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:38:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- EXECUTION TIME:
1.22747
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:38:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- EXECUTION TIME:
1.20309
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:38:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:38:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",R[0])
print("salmonela:",R[1])
print("coli:",R[2])
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",round(R[0],1))
print("salmonela:",round(R[1],1))
print("coli:",round(R[2],1))
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:39:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
nome = ["estafilococo","salmonela","coli"]
M = array([[2 ,1  ,4 ], [1 ,2 , 0 ], [2 ,3  ,2 ]])
v =  array(eval(input("")))
R = dot(inv(M),v.T)
print("estafilococo:",round(R[0],1))
print("salmonela:",round(R[1],1))
print("coli:",round(R[2],1))
mini =0
for i in range(len(R)):
	if(R[mini]>R[i]):
		mini = i
print(nome[mini])
-- EXECUTION TIME:
1.04013
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
